@@ -78,6 +78,12 @@ analysis2 = _singleton_method('analysis2')
 report =    _singleton_method('report')
 annotate =  _singleton_method('annotate')
 
+
+# On Windows, we encode and decode deep enough that something goes wrong and
+# the encodings.utf_8 module is loaded and then unloaded, I don't know why.
+# Adding a reference here prevents it from being unloaded.  Yuk.
+import encodings.utf_8
+
 # Because of the "from coverage.control import fooey" lines at the top of the
 # file, there's an entry for coverage.coverage in sys.modules, mapped to None.
 # This makes some inspection tools (like pydoc) unable to find the class
@@ -87,6 +93,7 @@ try:
     del sys.modules['coverage.coverage']
 except KeyError:
     pass
+
 
 # COPYRIGHT AND LICENSE
 #
